--- a/wp-content/themes/roots-master/assets/less/_team.less
+++ b/wp-content/themes/roots-master/assets/less/_team.less
@@ -51,6 +51,10 @@
 // 	font-size: @font-size-h4;
 // }
 
+// .team-img-lg .img-responsive{
+// 	display: inline-block !important;
+// }
+
 @media (min-width: @screen-sm-min)  {
 
 }
