--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -60,9 +60,8 @@ body.portfolio, body.category{
 	position:relative; 
 	width:100%;
 	left: 0;
-	background: #fff;
+	background: #000;
 	z-index: 1;
-	border-bottom: 1px solid #d6d5d5;
 }
 
 .portfolio-categories .category-thumbs{
