--- a/wp-content/themes/roots-master/assets/less/_team.less
+++ b/wp-content/themes/roots-master/assets/less/_team.less
@@ -2,12 +2,7 @@
 	margin-top: 200px;
 	margin-bottom: 60px;
 }
-// .team-imgs{
-// 	position: relative;
-// 	left: -1px;
-// 	top: -10px;
-// 	clear: both;
-// }
+
 .team-imgs .headshot{
 	position: relative;
 	.bg{
@@ -52,14 +47,17 @@
 	}
 }
 
-// .team-back{
-// 	margin:20px 0;
-// 	font-size: @font-size-h4;
-// }
+.team-back{
+	margin:20px 0 0;
+	font-size: @font-size-h4;
+}
+
 
 
 @media (min-width: @screen-sm-min)  {
-
+	.type-team{
+		margin-top: 130px;
+	}
 }
 
 @media (min-width: @screen-md-min)  {
