set up basic style for portfolio page

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -193,6 +193,10 @@ a:focus{
     }
 }
 
+.header-fixed h3{
+	color: #fff;
+}
+
 .category .bg h4{
 	.opacity(1);
 	.transition(opacity 0.4s ease);
@@ -231,6 +235,13 @@ footer{
 	color: #fff;
 	padding: 25px;
 	position: relative;
+}
+
+.single-portfolio footer{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 }
 
 // footer .bottom{
