--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -6,40 +6,40 @@ body.portfolio, body.category{
 	position: relative;
 }
 
-.portfolio-categories .portfolio-dropdown{
-	width: 100%;
-	button{
-		width: 100%;
-		text-align: left;
-		border-radius: 0;
-		border: none;
-		background: @gray;
-		padding: 10px 20px;
-		.caret{
-			margin-top: 8px;
-		}
-	}
-	.dropdown-menu{
-		width: 100%;
-		left: 0;
-		margin-top: -1px;
-		padding: 25px 0;
-		border-radius: 0;
-		border: none;
-		background: @gray-dark;
-		font-size: @font-size-base;
-		a{
-			color: #fff;
-			text-transform: uppercase;
-			padding: 5px 30px;
-		}
-		a:hover{
-			background: @gray;
-			color:#000;
-		}
+// .portfolio-categories .portfolio-dropdown{
+// 	width: 100%;
+// 	button{
+// 		width: 100%;
+// 		text-align: left;
+// 		border-radius: 0;
+// 		border: none;
+// 		background: @gray;
+// 		padding: 10px 20px;
+// 		.caret{
+// 			margin-top: 8px;
+// 		}
+// 	}
+// 	.dropdown-menu{
+// 		width: 100%;
+// 		left: 0;
+// 		margin-top: -1px;
+// 		padding: 25px 0;
+// 		border-radius: 0;
+// 		border: none;
+// 		background: @gray-dark;
+// 		font-size: @font-size-base;
+// 		a{
+// 			color: #fff;
+// 			text-transform: uppercase;
+// 			padding: 5px 30px;
+// 		}
+// 		a:hover{
+// 			background: @gray;
+// 			color:#000;
+// 		}
 		
-	}
-}
+// 	}
+// }
 
 
 
@@ -74,40 +74,28 @@ body.portfolio, body.category{
 	}
 }
 
-.single-portfolio{
-	z-index: 5;
-	position: relative;
-}
+
 .single-portfolio .breadcrumbs{
-	margin-bottom: 0px;
+	margin-bottom: 0;
 }
 
-.single-portfolio .links{
-	margin-top: 20px;
-}
-.single-portfolio h3{ 
-	color: @text-color;
+.single-portfolio .thumbs{
+	margin-top: 90px;
+	.col-xs-1{
+		padding-right: 5px;
+		padding-left: 5px;
 	
-}
+		a{
+			padding: 2px;
+			background: #fff;
+			display: inline-block;
 
-.single-portfolio small{
-	position: relative;
-	cursor: pointer;
-	font-size: @font-size-small;
-	padding: 5px 0;
-	color:#000;
-	i{
-		position: relative;
-		top: 0px;
-		width: 20px;
-		height: 20px;
-		padding: 4px 2px;
-		text-align: center;
-		background: #999;
-		color: #fff;
+			&:hover{
+				background: @brand-primary;
+			}
+		}
 	}
 }
-
 
 .single-portfolio .extra-pad{
 	color: #000;
