made names go under header

--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -166,7 +166,8 @@ html, body{
 @media (min-width: @screen-sm-min)  {
 
 	.header-fixed{
-		position:fixed; 
+		position:fixed;
+		z-index: 100; 
 		.col-md-offset-6{
 			background: @gray-light;
 			padding-left: 0;
