--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -53,10 +53,9 @@ body.portfolio, body.category{
 	h4{
 		font-size: 16px;
 		position: absolute;
-		bottom: 5px;
+		margin: 0;
+		bottom: -2px;
 		left: 0;
-		padding-right: (@grid-gutter-width/2);
-		padding-left: (@grid-gutter-width/2);
 		color: #fff;
 		text-transform: uppercase;
 		font-family: @font-family-sans-serif;
