Desktop pre review tweaks

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -56,6 +56,24 @@ ul.siblings{
 	height: 140px;
 }
 
+.contact .social a{
+	margin-left: 5px;
+	font-size: @font-size-base*2.0;
+	&:hover{
+		.opacity(.7);
+	}
+}
+
+i.fa-linkedin-square{
+	color: #328dbe;
+}
+i.fa-facebook-square{
+	color: #5872a4;
+}
+i.fa-twitter-square{
+	color: #3db9ed;
+}
+
 .btn-close{
 	img{
 		width: 13px;	
