--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -167,9 +167,9 @@ html, body{
 
 	.header-fixed{
 		position:fixed;
-		z-index: 1; 
+		z-index: 5; 
 		.col-md-offset-6{
-			background: @gray-light;
+			//background: @gray-light;
 			padding-left: 0;
 			padding-right: 0;
 		}
