--- a/wp-content/themes/roots-master/assets/less/_background-slide.less
+++ b/wp-content/themes/roots-master/assets/less/_background-slide.less
@@ -16,10 +16,14 @@
 	height: 101%;
 	top: -0.5%;
 	left: -0.5%;
-	opacity: 0;
+	.opacity(0);
 	-webkit-transition: opacity 1s;
 	-moz-transition: opacity 1s;
 	transition: opacity 1s;
+}
+
+.cbp-bislideshow li.current{
+	.opacity(1);
 }
 
 /* If background-size supported we'll add the images to the background of the li */
