--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -6,46 +6,17 @@ body.portfolio, body.category{
 	position: relative;
 }
 
-// .portfolio-categories .portfolio-dropdown{
-// 	width: 100%;
-// 	button{
-// 		width: 100%;
-// 		text-align: left;
-// 		border-radius: 0;
-// 		border: none;
-// 		background: @gray;
-// 		padding: 10px 20px;
-// 		.caret{
-// 			margin-top: 8px;
-// 		}
-// 	}
-// 	.dropdown-menu{
-// 		width: 100%;
-// 		left: 0;
-// 		margin-top: -1px;
-// 		padding: 25px 0;
-// 		border-radius: 0;
-// 		border: none;
-// 		background: @gray-dark;
-// 		font-size: @font-size-base;
-// 		a{
-// 			color: #fff;
-// 			text-transform: uppercase;
-// 			padding: 5px 30px;
-// 		}
-// 		a:hover{
-// 			background: @gray;
-// 			color:#000;
-// 		}
-		
-// 	}
-// }
-
-
 
 .portfolio-categories .category-thumbs{
 	margin-top: 20px;
 	margin-bottom: 60px;
+}
+
+.portfolio-categories .col-md-3.category-title h4{
+	width: 100%;
+	text-align: center;
+	bottom: 42%;
+	font-size: 28px;
 }
 
 .portfolio-categories .col-md-3{ 
@@ -91,6 +62,10 @@ body.portfolio, body.category{
 
 			&:hover{
 				background: @brand-primary;
+			}
+
+			&.current{
+				background: @brand-primary;	
 			}
 		}
 	}
@@ -173,10 +148,13 @@ body.portfolio, body.category{
 }
 
 @media (min-width: @screen-md-min)  {
-	
-
 	.portfolio-dropdown{
 		left: (@grid-gutter-width / 2);
+	}
+
+	.single-portfolio .thumbs{
+		position: absolute;
+		left: 23px;
 	}
 
 }
