Adjusted style on team single

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -13,6 +13,10 @@ h5{
 	font-weight: 800;
 }
 
+.cap{
+	text-transform: uppercase;
+}
+
 .content ul{
 	padding-left: 15px;
 	font-size: @font-size-small;
