--- a/wp-content/themes/roots-master/assets/less/_variables.less
+++ b/wp-content/themes/roots-master/assets/less/_variables.less
@@ -46,3 +46,4 @@
 @navbar-default-link-hover-color: @brand-primary;
 
 @font-size-h4: ceil((@font-size-base * 1.2)); // ~18px
+@font-size-h5: ceil((@font-size-base * 1)); // ~18px
