--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -177,7 +177,7 @@ html, body{
 
 		.page-header{
 			margin-top: 40px;
-			padding-left: (@grid-gutter-width / 2);
+			//padding-left: (@grid-gutter-width / 2);
 		}
 	}
 
