--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -10,6 +10,9 @@ body.portfolio, body.category{
 .portfolio-categories .category-thumbs{
 	margin-top: 20px;
 	margin-bottom: 60px;
+	.col-md-3{	
+		margin-bottom: 10px;
+	}
 }
 
 .portfolio-categories .col-md-3.category-title h4{
@@ -99,19 +102,16 @@ body.portfolio, body.category{
 		background-color: #fff;
 	}	
 
-	.category-thumbs .blank{
-		display: block;
-	}
-
 
 	.portfolio-categories .col-md-3{ 
 		max-width: none;
 
 	}
 	.portfolio-categories .category-thumbs{
-		margin-top: 200px;
+		margin-top: 185px;
 		.col-md-3{
 			padding: 5px;
+			margin-bottom: 0;
 		}
 	}
 
