Added ability to add placeholder on team page

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -247,6 +247,7 @@ a:focus{
 }
 
 footer{
+	font-size: @font-size-base*0.9;
 	background-color: rgba(0, 0, 0, 0.5);
 	text-transform: uppercase;
 	color: #fff;
@@ -298,6 +299,15 @@ footer{
 		.breadcrumbs li:last-child{
     		color: #fff !important;
     	}
+	}
+
+	footer{
+		.left{
+			padding-left: 33px;
+		}
+		.right{
+			padding-right: 33px;
+		}
 	}
 
 }
