Finished mobile portfolio single

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -131,12 +131,6 @@ a:focus{
 	background-size: 20px;	
 }
 
-.mobile-img{
-
-	margin-top: -20px;
-	margin-bottom: 10px;
-}
-
 .gallery-biprev{
 	left: 0;
 	background-image: url(../img/previous.png);
@@ -256,7 +250,7 @@ footer{
 }
 
 .single-portfolio footer{
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	left: 0;
 	width: 100%;
@@ -308,6 +302,10 @@ footer{
 		.right{
 			padding-right: 33px;
 		}
+	}
+
+	.single-portfolio footer{
+		position: absolute;
 	}
 
 }
