--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -159,8 +159,11 @@ html, body{
 	position:relative; 
 	width:100%;
 	left: 0;
-	
 	z-index: 1;
+}
+
+.single-portfolio .header-fixed{
+	background: #000;
 }
 
 @media (min-width: @screen-sm-min)  {
