--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -181,6 +181,7 @@ a:focus{
 
 .page-header{
 	margin-top: 30px;
+	margin-bottom: 0;
 	border-bottom: none;
 	border-bottom: none;
 }
@@ -188,7 +189,7 @@ a:focus{
 .breadcrumbs ul{
 	font-family: @headings-font-family;
 	text-transform: uppercase;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	padding-left: 0;
     list-style:none;
     overflow:hidden;
@@ -262,6 +263,9 @@ footer{
 		background-color: #000;
 	}
 	
+	.breadcrumbs ul{
+		margin-bottom: 30px;
+	}
 
 	.extra-pad{
 		padding: (@grid-gutter-width / 2);
@@ -273,6 +277,10 @@ footer{
 
 	.breadcrumbs{
 		margin-bottom: 60px;
+	}
+
+	.page-header{
+		margin-bottom: 20px;
 	}
 
 	.cbp-bislideshow, .shadow, .gallery-biprev, .gallery-binext{
