--- a/wp-content/themes/roots-master/assets/less/_team.less
+++ b/wp-content/themes/roots-master/assets/less/_team.less
@@ -48,13 +48,16 @@
 }
 
 .team-back{
-	margin:20px 0 0;
+	margin:0;
 	font-size: @font-size-h4;
 }
 
 
 
 @media (min-width: @screen-sm-min)  {
+	.team-back{
+		margin:20px 0 0;
+	}
 	.type-team{
 		margin-top: 130px;
 	}
