--- a/wp-content/themes/roots-master/assets/less/_team.less
+++ b/wp-content/themes/roots-master/assets/less/_team.less
@@ -59,11 +59,16 @@
 		margin:20px 0 0;
 	}
 	.type-team{
-		margin-top: 130px;
+		margin-top: 160px;
 	}
 	.team-imgs{
 		margin-top: 200px;
-		margin-bottom: 60px;
+		// margin-bottom: 60px;
+	}
+
+	.single-team .header-fixed .col-sm-6, .single-team .header-fixed .extra-pad{
+		padding-left: 0;
+		padding-right: 0;
 	}
 	
 }
