--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -72,6 +72,7 @@ body.portfolio, body.category{
 	.col-xs-1{
 		padding-right: 5px;
 		padding-left: 5px;
+		width: 8.1%;
 	
 		a{
 			padding: 2px;
