--- a/wp-content/themes/roots-master/assets/less/_home.less
+++ b/wp-content/themes/roots-master/assets/less/_home.less
@@ -1,101 +1,96 @@
-.home .navbar-brand{
-	display: none;
+.home .navbar-brand {
+    display: none;
 }
 
-.logo, .celebrate{
-	display: none;
+.logo,
+.celebrate {
+    //	display: none;
+    //max-width: 80%;
 }
 
-.experience{
-	display: none;
+.logo,
+.celebrate {
+    display: block;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    top: 50%;
+    left: 0;
+    margin-top: -40px;
+    img {
+        width: 90%;
+        display: inline-block;
+    }
 }
 
-.home .cbp-bislideshow, .home .shadow{
-	display: block;
+.logo,
+.celebrate {
+    .opacity(0);
+    .transition(opacity 2.0s ease);
 }
 
-@media (min-width: @screen-sm-min)  {
-
-	.home .navbar-brand{
-		display: block;
-	}
-
-	.logo, .celebrate{
-		display: block;
-		position: fixed;
-		width: 100%;
-		text-align: center;
-		top: 50%;
-		left: 0;
-		margin-top: -40px;
-		img{
-			width: 90%;
-			display: inline-block;
-		}
-	}
-
-	.celebrate{
-		display: none;
-	}
-
+.animate-1 .logo {
+    .opacity(1);
 }
 
-@media (min-width: @screen-md-min)  {
-
-	.logo{
-		position: fixed;
-		width: 100%;
-		text-align: center;
-		top: 50%;
-		left: 0;
-		margin-top: -40px;
-		img{
-			width: 1075px;
-			display: inline-block;
-		}
-	}
-
-	.celebrate{
-		display: block; 
-		img{
-			width: 1062px;
-		}
-	}
-
-	.experience{
-		display: inline-block;
-		color: #fff;
-		position: fixed;
-		height: 30px;
-		margin: -50px 0 0 0px;
-		bottom: -50px;
-		left: 42px;
-		border-top: 1px solid #fff;
-		h4{
-			font-size: 16px;
-		}
-	}
-
-	.animate-3 .experience{
-		bottom: 15px;
-		.transition(bottom 2.8s ease);
-	}
-
-	.logo, .celebrate{
-		.opacity(0);
-		.transition(opacity 2.0s ease);
-	}
-
-	.animate-1 .logo{
-		.opacity(1);	
-	}
-	
-	.animate-2 .celebrate{
-		.opacity(1);
-	}
-
+.animate-2 .celebrate {
+    .opacity(1);
 }
 
-@media (min-width: @screen-lg-min)  {
-
+.experience {
+    display: none;
 }
+
+.home .cbp-bislideshow,
+.home .shadow {
+    display: block;
+}
+
+@media (min-width: @screen-sm-min) {
+    .home .navbar-brand {
+        display: block;
+    }
+    .celebrate {
+        display: none;
+    }
+}
+
+@media (min-width: @screen-md-min) {
+    .logo {
+        position: fixed;
+        width: 100%;
+        text-align: center;
+        top: 50%;
+        left: 0;
+        margin-top: -40px;
+        img {
+            width: 1075px;
+            display: inline-block;
+        }
+    }
+    .celebrate {
+        display: block;
+        img {
+            width: 1062px;
+        }
+    }
+    .experience {
+        display: inline-block;
+        color: #fff;
+        position: fixed;
+        height: 30px;
+        margin: -50px 0 0 0px;
+        bottom: -50px;
+        left: 42px;
+        border-top: 1px solid #fff;
+        h4 {
+            font-size: 16px;
+        }
+    }
+    .animate-3 .experience {
+        bottom: 15px;
+        .transition(bottom 2.8s ease);
+    }
+}
+
+@media (min-width: @screen-lg-min) {}
