--- a/wp-content/themes/roots-master/assets/less/_portfolio.less
+++ b/wp-content/themes/roots-master/assets/less/_portfolio.less
@@ -1,192 +1,226 @@
-body.portfolio, body.category{
-	background-color: #fff;
+body.portfolio,
+body.category {
+    background-color: #fff;
 }
 
-.mobile-portfolio{
-	position: relative;
-	background: #000;
+.single-portfolio .shadow {
+    display: none;
 }
 
-.mobile-portfolio .mobile-img{
-	display: none;
-	.opacity(0);
-	.transition(opacity 2.0s ease);
-	
-}
-.mobile-portfolio .current{
-	display: block;
-	.opacity(1);
+.mobile-portfolio {
+    position: relative;
+    background: #000;
 }
 
-.portfolio-categories .category-thumbs{
-	margin-top: 20px;
-	margin-bottom: 60px;
-	.col-md-3{	
-		margin-bottom: 10px;
-	}
+.mobile-portfolio .mobile-img {
+    display: none;
+    width: 100%;
+    margin: 0;
+    .opacity(0);
+    .transition(opacity 2.0s ease);
 }
 
-.portfolio-categories .col-md-3.category-title h4{
-	width: 100%;
-	text-align: center;
-	bottom: 42%;
-	font-size: 28px;
+.mobile-portfolio .current {
+    display: block;
+    .opacity(1);
 }
 
-.portfolio-categories .col-md-3{ 
-	max-width: 430px;	
-	h4{
-		font-size: 18px;
-		position: absolute;
-		margin: 0;
-		bottom: -2px;
-		left: 0;
-		color: #fff;
-		text-transform: uppercase;
-		font-family: @font-family-sans-serif;
-	}
-	
-	.bg{
-		position: relative;
-		background: @brand-primary;
-		img{
-			.opacity(1);
-			.transition(opacity 0.4s ease);
-			-webkit-backface-visibility: hidden;
-    		-webkit-transform: translateZ(0) scale(1.0, 1.0);
-		}
-	}
+.portfolio-categories .category-thumbs {
+    margin-top: 20px;
+    margin-bottom: 60px;
+    .col-md-3 {
+        margin-bottom: 10px;
+    }
+    .bg {
+        position: relative;
+        background: @brand-primary;
+        img {
+            .opacity(1);
+            .transition(opacity 0.4s ease);
+            -webkit-backface-visibility: hidden;
+            -webkit-transform: translateZ(0) scale(1.0, 1.0);
+        }
+    }
 }
 
-
-.single-portfolio .breadcrumbs{
-	margin-bottom: 0;
+.portfolio-categories .col-md-3.category-title {
+    max-width: 430px;
+    .middle {
+        display: table;
+        vertical-align: middle;
+        height: 70px;
+        bottom: 35%;
+        position: absolute;
+        width: 100%;
+    }
+    h4 {
+        width: 100%;
+        text-align: center;
+        font-size: 28px;
+        color: #fff;
+        text-transform: uppercase;
+    }
 }
 
-.single-portfolio .header-fixed{
-	padding: 25px;
-}
-.single-portfolio .thumbs{
-	position: relative;
-	
-	.col-xs-1{
-		padding-right: 5px;
-		padding-left: 5px;
-		width: 8.1%;
-	
-		a{
-			padding: 2px;
-			background: #fff;
-			display: inline-block;
-
-			&:hover{
-				background: @brand-primary;
-			}
-
-			&.current{
-				background: @brand-primary;	
-			}
-		}
-	}
+.portfolio-categories .cat {
+    max-width: 430px;
+    h4 {
+        font-size: 20px;
+        position: absolute;
+        margin: 0;
+        bottom: -4px;
+        left: 0;
+        color: #fff;
+        text-transform: uppercase;
+        font-family: @font-family-sans-serif;
+        font-weight: 500;
+    }
 }
 
-.single-portfolio .extra-pad{
-	color: #000;
-	a{
-		color: #000;
-	}
-	a:hover{
-		color: @brand-primary;
-	}
-
-}
-.single-portfolio h4{
-	color: #fff;
-	margin-bottom: 3px;
-}
-.single-portfolio h5{
-	color: #000;
-	margin-bottom: 3px;
+.category .bg h4 {
+    .opacity(1);
+    .transition(opacity 0.4s ease);
 }
 
-.expand-portfolio{
-	display: none;
+.category .category-title .bg h4 {
+    .opacity(1);
 }
 
-@media (min-width: @screen-sm-min)  {
-
-	.single-portfolio .header-fixed{
-		padding: 0px;
-	}
-	.single-portfolio .thumbs{
-		left: 37px;
-		margin-top: 90px;
-		margin-bottom: 20px;	
-	}
-
-	body.portfolio, body.category{
-		background-color: #fff;
-	}	
-
-	.mobile-portfolio{
-		display: none;
-	}
-
-	.portfolio-categories .col-md-3{ 
-		max-width: none;
-
-	}
-	.portfolio-categories .category-thumbs{
-		margin-top: 185px;
-		.col-md-3{
-			padding: 5px;
-			margin-bottom: 0;
-		}
-	}
-
-	.category .bg h4{
-		.opacity(0);
-	}
-
-	.portfolio .navbar-toggle, .category .navbar-toggle{
-		color: #484848;
-	}
-
-		.single-portfolio{
-		background: rgba(255, 255, 255, 0.85);
-	}
-
-	.single-portfolio h3{
-		margin-top: 0;
-	}
-	
-	.single-portfolio .entry-content{
-		display: none;
-	}
-
-	.single-portfolio .entry-content .dropdown{
-		.opacity(0);
-		.transition(opacity 2.0s ease);
-	}
-	
-	.single-portfolio .entry-content .dropdown.fade-in{
-		.opacity(1);
-	}
-
-	.expand-portfolio{
-		display: block;
-	}
-
+.portfolio-categories .col-md-3 {
+    .bg:hover img {
+        .opacity(0.5);
+    }
+    .bg:hover h4 {
+        .opacity(1);
+    }
 }
 
-@media (min-width: @screen-md-min)  {
-	.portfolio-dropdown{
-		left: (@grid-gutter-width / 2);
-	}
-
-
+.single-portfolio .breadcrumbs {
+    margin-bottom: 0;
 }
 
-@media (min-width: @screen-lg-min)  {
-
+.single-portfolio .header-fixed {
+    padding: 25px;
 }
+
+.single-portfolio .thumbs {
+    position: relative;
+    .col-xs-1 {
+        padding-right: 5px;
+        padding-left: 5px;
+        width: 15%;
+        a {
+            padding: 2px;
+            background: #fff;
+            display: inline-block;
+            &:hover {
+                background: @brand-primary;
+            }
+            &.current {
+                background: @brand-primary;
+            }
+        }
+    }
+}
+
+.single-portfolio .extra-pad {
+    color: #000;
+    a {
+        color: #000;
+    }
+    a:hover {
+        color: @brand-primary;
+    }
+}
+
+.single-portfolio h4 {
+    color: #fff;
+    margin-bottom: 3px;
+}
+
+.single-portfolio h5 {
+    color: #000;
+    margin-bottom: 3px;
+}
+
+.expand-portfolio {
+    display: none;
+}
+
+@media (min-width: @screen-sm-min) {
+    .portfolio-categories .col-md-3.category-title .middle {
+        bottom: 26%;
+    }
+    .single-portfolio .thumbs .col-xs-1 {
+        width: 10%;
+    }
+    .single-portfolio .header-fixed {
+        padding: 0px;
+    }
+    .single-portfolio .thumbs {
+        left: 37px;
+        margin-top: 90px;
+        margin-bottom: 20px;
+    }
+    body.portfolio,
+    body.category {
+        background-color: #fff;
+    }
+    .mobile-portfolio {
+        display: none;
+    }
+    .portfolio-categories .col-md-3 {
+        max-width: none;
+    }
+    .portfolio-categories .category-thumbs {
+        margin-top: 185px;
+        .col-md-3 {
+            padding: 5px;
+            margin-bottom: 0;
+        }
+    }
+    .category .bg h4 {
+        .opacity(0);
+    }
+    .portfolio .navbar-toggle,
+    .category .navbar-toggle {
+        color: #484848;
+    }
+    .single-portfolio {
+        background: rgba(255, 255, 255, 0.85);
+    }
+    .single-portfolio h3 {
+        margin-top: 0;
+    }
+    .single-portfolio .entry-content {
+        display: none;
+    }
+    .single-portfolio .entry-content .dropdown {
+        .opacity(0);
+        .transition(opacity 2.0s ease);
+    }
+    .single-portfolio .entry-content .dropdown.fade-in {
+        .opacity(1);
+    }
+    .expand-portfolio {
+        display: block;
+    }
+    .backgroundsize .single-portfolio .cbp-bislideshow li.vertical {
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    body.single-portfolio {
+        background-color: #222;
+    }
+}
+
+@media (min-width: @screen-md-min) {
+    .portfolio-dropdown {
+        left: (@grid-gutter-width / 2);
+    }
+    .single-portfolio .thumbs .col-xs-1 {
+        width: 9%;
+    }
+}
+
+@media (min-width: @screen-lg-min) {}
